MDEV-7926 Server crashes in get_geometry_column_record on concurrent SELECT FROM I_S.GEOMETRY_COLUMNS with join and DDL.          The bug was that open_tables() returned error in case of         thd->killed() without properly calling thd->send_kill_message()         to set the correct error. This was fixed already in get_schema_column_record,         so the code was just copied to get_geometry_column_record.